<resources>
    <string name="app_name">PSE AI Project</string>

    <!-- Stringhe per la schermata home -->
    <string name="start">Get started!</string>
    <string name="apple">Object recognition icon</string>
    <string name="changeTheme">Change theme</string>
    <string name="AppTitle">ObjectDetection</string>
    <string name="MadeBy">Andrea Mutti, Alessandro Girlanda e Umberto Bianchin</string>
    <string name="androidStu">Android Studio icon</string>
    <string name="android">Android icon</string>
    <string-array name="spinner_items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
    </string-array>

    <!-- Stringhe utilizzate per la schermata di Login/SignUp -->
    <string name="logout">logout</string>
    <string name="registrati">Registrati per poter utilizzare l\'applicazione</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Conferma Password</string>
    <string name="login_button">Login</string>
    <string name="login">Autenticati</string>
    <string name="signup_button">SignUp</string>
    <string name="signup">Registrati</string>
    <string name="email_text">Email</string>
    <string name="account_circle">Account Circle</string>
    <string name="no_account">Non hai un account? Registrati!</string>
    <string name="yes_account">Hai già un account? Accedi!</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="lock_icon">Lock icon</string>
    <string name="password_dimenticata_title">Password dimenticata</string>
    <string name="password_dimenticata_subtitle">Inserisci la tua mail per il recupero della password</string>
    <string name="back_button">Indietro</string>
    <string name="reset_password">Reset Password</string>
    <string name="volume_button">Volume</string>

    <!-- Stringhe utilizzate per il modale -->
    <string name="impostazioni_modello">Impostazioni modello</string>
    <string name="apri_modale">Apri Modale</string>
    <string name="minus_button_first">First Minus</string>
    <string name="plus_button_first">First Plus</string>
    <string name="minus_button_second">Second Minus</string>
    <string name="plus_button_second">Second Plus</string>
    <string name="chiudi">Chiudi</string>
    <string name="max_rettangoli">Max rettangoli</string>
    <string name="treshold">Valore di soglia</string>
    <string name="start_treshold_value">0.5</string>
    <string name="start_rectangle_value">3</string>
    <string name="delegato">Delegato</string>
    <string-array name="delegati">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>


    <string name="spinner_item_icon">Spinner item icon</string>
    <string name="logo_descriptor">LOGO</string>

    <!-- Stringhe per la schermata info -->
    <string name="version">Version 1.0</string>
    <string name="infoText">ObjectDetection è un app che permette l\'individuazione e la classificazione di oggetti attraverso la camera frontale.
        Questa funzionalità è implementata tramite il <a href="https://www.tensorflow.org/lite/examples/object_detection/overview">modello</a> TensorFlow Lite dedicato all\'ObjectDetection che consiste in una rete neurale convoluzionale che, data un\'immagine di input, compie le seguenti operazioni:\n\n
        &#8226; Estrazione delle caratteristiche rilevanti per l\'individuazione di oggetti nell\'immagine (Feature Extraction);\n\n
        &#8226; Generazione di possibili regioni dell\'immagine che potrebbero contenere oggetti (Regional Proposal);\n\n
        &#8226; Predizione delle coordinate dei rettangoli che delimitano gli oggetti (Bounding Box Regression);\n\n
        &#8226; Assegnamento di una classe a ciascun oggetto rilevato fornendo un punteggio di confidenza per ogni previsione (Classification).\n\nTramite queste operazioni la rete fornisce in output le bounding boxes, le classi degli oggetti e i punteggi di confidenza.</string>
</resources>