<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SignInActivity">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/baseline_account_circle_24"
        android:contentDescription="@string/account_circle"
        />

    <!-- TextView per mostrare delle info -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signin"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="30sp"
        android:paddingTop="10dp"
        android:text="@string/login"
        android:textAllCaps="true"/>

    <!-- EditText per l'inserimento dell'email -->
    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/email_text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:padding="18dp"
        android:inputType="textEmailAddress" />

    <!-- EditText per l'inserimento della password -->
    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/password_text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:padding="18dp"
        android:inputType="textPassword" />

    <!-- MaterialButton per il SignIn -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:backgroundTint="@color/white"
        android:text="@string/login_button"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:iconGravity="textStart"
        android:textSize="20sp"
        app:iconTint="@color/black" />

    <!-- Link alla pagina di SingUp -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/not_signup"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:text="@string/no_account"/>

    <!-- Link alla pagina di ResetPassword -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_password"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:text="@string/password_dimenticata"/>

</LinearLayout>
