<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SignInActivity">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/baseline_account_circle_24"
        android:contentDescription="@string/account_circle"
        />

    <!--EditText per l'inserimento dell'username -->
    <EditText
        android:id="@+id/email_input_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/email_text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:padding="18dp"
        android:inputType="textEmailAddress" />

    <!--EditText per l'inserimento della password -->
    <EditText
        android:id="@+id/password_input_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password_text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:padding="18dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_password_input_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password_text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:padding="18dp"
        android:inputType="textPassword" />

    <!-- Login Button -->
    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/white"
        android:padding="18dp"
        android:text="@string/signup_button"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/already_signup"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:text="@string/yes_account"/>

</LinearLayout>
