<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_baseline_lock"
        android:contentDescription="@string/lock_icon"
        />

    <!-- TextView per mostrare delle info -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recover_password"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="30sp"
        android:paddingTop="10dp"
        android:text="@string/password_dimenticata_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recover_password2"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:text="@string/password_dimenticata_subtitle"/>

    <!--EditText per l'inserimento dell'email -->
    <EditText
        android:id="@+id/forgot_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/email_text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:padding="18dp"
        android:inputType="textEmailAddress" />

    <!-- FrameLayout per avere una progressbar nascosta sotto il bottone da attivare in seguito -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <ProgressBar
            android:id="@+id/forgetPasswordProgressbar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/reset_password"
            app:cornerRadius="10dp"
            app:iconGravity="textStart"/>

    </FrameLayout>

    <!-- Bottone per tornare alla schermata precedente -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/back_button"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:icon="@drawable/baseline_arrow_back_24"
        app:iconGravity="textStart"
        app:iconTint="@color/black" />

</LinearLayout>
