<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Pulsante di back -->

            <!-- Titolo della toolbar -->
            <ImageButton
                android:id="@+id/back_button_toolbar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:tint="@color/black"
                android:background="@color/white"
                android:contentDescription="@string/back_button"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/toolbar_title"
                app:layout_constraintHorizontal_bias="0.148"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Immagine del logo -->
            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo_descriptor"
                android:scaleType="centerInside"
                android:src="@drawable/apple_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toolbar_title"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:name="it.unipd.dei.pseaiproject.ui.CameraFragment"
        tools:layout="@layout/fragment_camera" />

    <!-- Aggiunta del bottone -->
    <ImageButton
        android:id="@+id/modal_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/black"
        android:background="@color/black"
        android:contentDescription="@string/apri_modale"
        android:src="@drawable/baseline_arrow_drop_up_24"
        android:layout_gravity="center"/>
</LinearLayout>
