<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/androidStudio"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/androidStu"
        android:src="@drawable/android_studio"
        app:layout_constraintBottom_toTopOf="@id/horizontal_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toLeftOf="@id/vertical_view"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />

    <View
        android:id="@+id/horizontal_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/vertical_view"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:background="@color/lightGrey"
        app:layout_constraintRight_toLeftOf="@id/spinner"
        app:layout_constraintBottom_toTopOf="@id/horizontal_view" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/AppIcon"
                android:layout_width="87dp"
                android:layout_height="73dp"
                android:layout_marginStart="60dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/android"
                android:src="@mipmap/object_icon_round"
                app:layout_constraintBottom_toTopOf="@+id/TextView"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="@id/AppTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.538" />

            <TextView
                android:id="@+id/AppTitle"
                android:layout_width="245dp"
                android:layout_height="62dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:letterSpacing="0.05"
                android:text="@string/AppTitle"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.903"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="92dp" />

            <TextView
                android:id="@+id/AppVersion"
                android:layout_width="187dp"
                android:layout_height="46dp"
                android:layout_marginTop="1dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:letterSpacing="0.05"
                android:padding="10dp"
                android:text="@string/version"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.79"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AppTitle" />

            <TextView
                android:id="@+id/TextView"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:fontFamily="arial"
                android:letterSpacing="0.05"
                android:padding="16dp"
                android:text="@string/infoText"
                android:textSize="15sp"
                android:linksClickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/AppVersion" />

            <ImageView
                android:id="@+id/android"
                android:layout_width="87dp"
                android:layout_height="73dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/android"
                android:src="@drawable/android"
                app:layout_constraintTop_toBottomOf="@id/TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/madeBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:letterSpacing="0.05"
                android:padding="10dp"
                android:text="@string/MadeBy"
                android:textSize="11sp"
                app:layout_constraintTop_toBottomOf="@id/android"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
