<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="231dp"
        android:layout_height="310dp"
        android:contentDescription="@string/apple"
        android:background="@android:color/transparent"
        android:src="@drawable/apple_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="300dp"
        android:layout_height="63dp"
        android:text="@string/AppTitle"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:padding="16dp"
        android:letterSpacing="0.05"
        android:shadowColor="#33000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/horizontal_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <View
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:background="@color/lightGrey"
        app:layout_constraintRight_toLeftOf="@id/spinner"
        app:layout_constraintBottom_toTopOf="@id/horizontal_view" />


    <Button
        android:id="@+id/getStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="@id/toolbar"
            app:layout_constraintTop_toTopOf="@id/toolbar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

</androidx.constraintlayout.widget.ConstraintLayout>